--- a/BlackJackClientServer/BlackJackServer/nbproject/private/private.properties
+++ b/BlackJackClientServer/BlackJackServer/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\Yakir\\AppData\\Roaming\\NetBeans\\7.4\\tomcat70.properties
 j2ee.server.home=C:/apache-tomcat-7.0.53
 j2ee.server.instance=tomcat70:home=C:\\apache-tomcat-7.0.53
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\Yakir\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
